# it_ipm_lab-4

./: CMakeLists.txt  Jenkinsfile  stringProcessor.h
